--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                             I am a pasionate engineer who loves to learn about the many different facets of my field.
                         </p>
                 </div>
+                <div>
+                    <h2 class="intro">A Little About Me</h2>
+                        <p class="paragraphs">
+                            I am a pasionate engineer who loves to learn about the many different facets of my field.
+                        </p>
+                </div>
             </section>
         </main>
     
