--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div>
                     <h2 class="intro">A Little About Me</h2>
                         <p class="paragraphs">
-                            I am a pasionate engineer who loves to learn about the many different facets of my field.
+                            Hi Prill
                         </p>
                 </div>
             </section>
