--- a/About.html
+++ b/About.html
@@ -10,13 +10,14 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <main>
             <header>
                 <nav>
                     <div class="links">
+                        <a href="index.html">Home</a>
                         <a href="About.html">About</a>
                         <a href="#">My Skills</a>
                         <a href="#">Projects</a>
@@ -29,13 +30,29 @@
                 <h1 class="hero_font">A Little About Me</h1>
                 <div>
                     <h2 class="intro">Interests</h2>
+                        <br>
                         <p class="paragraphs">
-                            I absolutly adore learning more about science and technologies, my interests are very broad in these fields and continue to grow as I learn more. I often find myself facinated with whatever field i begin to take part in. 
+                            I absolutly adore learning more about science and technologies, my interests are very broad in these fields and continue to grow as I learn more. I often find myself facinated with whatever field i begin to take part in. <br>
+                            <br>
+                            I love anything and everything that can fly, I look forward to learning more about things of this variety in the future. 
                         </p>
+                        <br>
                     <h2 class="intro">Hobbies</h2>
+                        <br>
                         <p>
-                            Not everything is about my 9-5!
-                            I am also an avid skier, hiker, aviator, and gamer. I am working towards my PPL (Private Pilot's License) on the weekends and I take every minute I can to enjoy the great outdoors wherever I find myself. When I am not oudoors or in the air I am most likely to be found online playing some video games to keep in contact with my friends from all over. 
+                            Not everything is about my 9-5! <br>
+                            <br>
+                            I am also an avid skier, hiker, aviator, and gamer. I am working towards my PPL (Private Pilot's License) on the weekends and I take every minute I can to enjoy the great outdoors wherever I find myself. 
+                            When I am not oudoors or in the air I am most likely to be found online playing some video games to keep in contact with my friends from all over. 
+                        </p>
+                        <br>
+                    <h2 class="intro">Travel</h2>
+                        <p>
+                            While Covid may have slowed me down, I very much enjoy a little bit of globe trotting. <br>
+                            <br>
+                            I think that my favorite thing about the world is the food and the interesting places that you can see along the way. I take as many photos of my travels as I can and mostly enjoy landscapes and flowers. <br>
+                            <br>
+                            The background you're enjoying now is actually one of my best photos!
                         </p>
             </section>
         </main>
