--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <header>
                 <nav>
                     <div class="links">
-                        <a href="#">About</a>
+                        <a href="index.html">Home</a>
+                        <a href="About.html">About</a>
                         <a href="#">My Skills</a>
                         <a href="#">Projects</a>
                         <a href="#">Work Experience</a>
@@ -28,19 +29,7 @@
             <section class="info">
                 <h1 class="hero_font">Welcome to Jake Gillow's Portfolio</h1>
                 <div>
-                    <h2 class="intro">A Little About Me</h2>
-                        <p class="paragraphs">
-                            I am a pasionate engineer who loves to learn about the many different facets of my field.
-                        </p>
-                </div>
-                <div>
-                    <h2 class="intro">A Little About Me</h2>
-                        <p class="paragraphs">
-                            Hi Prill
-                        </p>
-                </div>
-            </section>
+                    <h2 class="intro">Feel Free to Have a Look Around</h2>
         </main>
-    
     </body>
 </html>
