--- a/About.html
+++ b/About.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>About</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
@@ -19,7 +19,7 @@
                     <div class="links">
                         <a href="index.html">Home</a>
                         <a href="About.html">About</a>
-                        <a href="#">My Skills</a>
+                        <a href="MySkills.html">My Skills</a>
                         <a href="#">Projects</a>
                         <a href="#">Work Experience</a>
                         <button class="button_med" href="#">Contact Me</button>
