Filled out myskills

--- a/MySkills.html
+++ b/MySkills.html
@@ -29,18 +29,52 @@
             <section class="info">
                 <h1 class="hero_font">The Things I've Learned Along the Way</h1>
                 <div>
-                    <h2 class="intro">Technical Languages</h2>
+                    <h2 class="intro">Technical Programing Languages</h2>
                         <br>
-                        <p class="paragraphs">
-                            <ul>
-                                HTML
-                                CSS
-                                Javascript
+                        <p>
+                            <ul class="paragraphs_lists">
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>Javascript</li>
                             </ul> 
                             <br>
-                            The bread and butter of any web designer!
+                        </p>
+                        <p class="paragraphs">
+                            The tools in the arsenal of any good web developer!                          
                         </p>
                         <br>
+                    <h2 class="intro">Engineering Skills</h2>
+                        <br>
+                        <p>
+                            <ul class="paragraphs_lists">
+                                <li>Catia</li>
+                                <li>Solidworks</li>
+                                <li>Dewesoft</li>
+                                <li>Instrumentation</li>
+                                <li>Troubleshooting of large systems</li>
+                            </ul> 
+                            <br>
+                        </p>
+                        <p class="paragraphs">
+                            My time spent as an engineer across multiple industries has brought about the development of a multitude of skills, both technical and soft skills. I have designed instrumentation, tested entire vehicle assemblies, cordinated teams, and managed modest budgets. All of these skills have led me to understand the proffesional field in a more complete way. 
+                            <br>                         
+                        </p>
+                        <br>
+                        <h2 class="intro">Soft Skills</h2>
+                            <br>
+                            <p>
+                                <ul class="paragraphs_lists">
+                                    <li>Project management</li>
+                                    <li>Teamwork</li>
+                                    <li>Time managment</li>
+                                    <li>Colaboration across countries and teams</li>
+                                </ul>
+                                <br>
+                            </p>
+                        <p class="paragraphs">
+                            Technical skills aren't everything I have needed to succeed! I have had to learn to work with different people from many different areas of expertise as well as different countries. These different gaps in time and sometimes language have allowed me to grow as a person and learn to colaborate well. 
+                        </p>
+                </div>     
             </section>
         </main>
     </body>
