--- a/About.html
+++ b/About.html
@@ -39,7 +39,7 @@
                         <br>
                     <h2 class="intro">Hobbies</h2>
                         <br>
-                        <p>
+                        <p class="paragraphs">
                             Not everything is about my 9-5! <br>
                             <br>
                             I am also an avid skier, hiker, aviator, and gamer. I am working towards my PPL (Private Pilot's License) on the weekends and I take every minute I can to enjoy the great outdoors wherever I find myself. 
@@ -47,13 +47,15 @@
                         </p>
                         <br>
                     <h2 class="intro">Travel</h2>
-                        <p>
+                        <br>
+                        <p class="paragraphs">
                             While Covid may have slowed me down, I very much enjoy a little bit of globe trotting. <br>
                             <br>
                             I think that my favorite thing about the world is the food and the interesting places that you can see along the way. I take as many photos of my travels as I can and mostly enjoy landscapes and flowers. <br>
                             <br>
                             The background you're enjoying now is actually one of my best photos!
                         </p>
+                </div>
             </section>
         </main>
     </body>
