--- a/MySkills.html
+++ b/MySkills.html
@@ -20,7 +20,7 @@
                         <a href="index.html">Home</a>
                         <a href="About.html">About</a>
                         <a href="MySkills.html">My Skills</a>
-                        <a href="#">Projects</a>
+                        <a href="Projects.html">Projects</a>
                         <a href="#">Work Experience</a>
                         <button class="button_med" href="#">Contact Me</button>
                     </div>
@@ -36,6 +36,7 @@
                                 <li>HTML</li>
                                 <li>CSS</li>
                                 <li>Javascript</li>
+                                <li>Shopify</li>
                             </ul> 
                             <br>
                         </p>
@@ -56,7 +57,7 @@
                             <br>
                         </p>
                         <p class="paragraphs">
-                            My time spent as an engineer across multiple industries has brought about the development of a multitude of skills, both technical and soft skills. I have designed instrumentation, tested entire vehicle assemblies, cordinated teams, and managed modest budgets. All of these skills have led me to understand the proffesional field in a more complete way. 
+                            My time spent as an engineer across multiple industries has brought about the development of a multitude of skills, both technical and soft skills. I have designed instrumentation, tested entire vehicle assemblies, cordinated teams, designed mechanical assemblies and managed modest budgets. All of these skills have led me to understand the proffesional field in a more complete way. 
                             <br>                         
                         </p>
                         <br>
