--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a href="index.html">Home</a>
                         <a href="About.html">About</a>
                         <a href="MySkills.html">My Skills</a>
-                        <a href="#">Projects</a>
+                        <a href="Projects.html">Projects</a>
                         <a href="#">Work Experience</a>
                         <button class="button_med" href="#">Contact Me</button>
                     </div>
@@ -30,6 +30,7 @@
                 <h1 class="hero_font">Welcome to Jake Gillow's Portfolio</h1>
                 <div>
                     <h2 class="intro">Feel Free to Have a Look Around</h2>
+                </div>
         </main>
     </body>
 </html>
