Fixed Projects link

--- a/About.html
+++ b/About.html
@@ -20,7 +20,7 @@
                         <a href="index.html">Home</a>
                         <a href="About.html">About</a>
                         <a href="MySkills.html">My Skills</a>
-                        <a href="#">Projects</a>
+                        <a href="Projects.html">Projects</a>
                         <a href="#">Work Experience</a>
                         <button class="button_med" href="#">Contact Me</button>
                     </div>
