--- a/MySkills.html
+++ b/MySkills.html
@@ -37,6 +37,7 @@
                                 <li>CSS</li>
                                 <li>Javascript</li>
                                 <li>Shopify</li>
+                                <li>Node.red</li>
                             </ul> 
                             <br>
                         </p>
