--- a/Projects.html
+++ b/Projects.html
@@ -46,12 +46,15 @@
                         </p>
                         <br>
                         <img src="#" alt="#">
+                        <br>
                     <h2 class="intro">Personal Projects</h2>
                         <br>
                         <p class="paragraphs">
                             Who says you have to get paid to learn something new? <br>
                             <br>
                             I have been working on an indoor, totally automated greenhouse for several months now. As my covid project, it has helped my learn to code in a new langauge (Node.red) as well as wire new and exciting sensors. My goal is to have fresh veggies and herbs for the kitchen, year round and totally without any care. <br>
+                            <br>
+                            The idea is to allow the plants to have everything that they will need with little to no intervention. I have automated lights, humidity, and watering all contained in a glass cabinet driven by a Raspberry Pi. I plan to add more as I complete sections of the build. 
                             <br>
                             <img src="#" alt="#">
                         </p>
