Added WorkExperience Page

--- a/MySkills.html
+++ b/MySkills.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -21,7 +17,7 @@
                         <a href="About.html">About</a>
                         <a href="MySkills.html">My Skills</a>
                         <a href="Projects.html">Projects</a>
-                        <a href="#">Work Experience</a>
+                        <a href="WorkExperience.html">Work Experience</a>
                         <button class="button_med" href="#">Contact Me</button>
                     </div>
                 </nav>
@@ -38,6 +34,7 @@
                                 <li>Javascript</li>
                                 <li>Shopify</li>
                                 <li>Node.red</li>
+                                <li>Git</li>
                             </ul> 
                             <br>
                         </p>
