--- a/MySkills.html
+++ b/MySkills.html
@@ -18,7 +18,7 @@
                         <a href="MySkills.html">My Skills</a>
                         <a href="Projects.html">Projects</a>
                         <a href="WorkExperience.html">Work Experience</a>
-                        <button class="button_med" href="#">Contact Me</button>
+                        <button class="button_med" href="ContactMe.html">Contact Me</button>
                     </div>
                 </nav>
             </header>
@@ -46,6 +46,7 @@
                         <br>
                         <p>
                             <ul class="paragraphs_lists">
+                                <li>BSc in Mechanical Engineering</li>
                                 <li>Catia</li>
                                 <li>Solidworks</li>
                                 <li>Dewesoft</li>
