--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -19,14 +19,14 @@
                         <a href="MySkills.html">My Skills</a>
                         <a href="Projects.html">Projects</a>
                         <a href="WorkExperience.html">Work Experience</a>
-                        <button class="button_med" href="#">Contact Me</button>
+                        <button class="button_med" href="ContactMe.html">Contact Me</button>
                     </div>
                 </nav>
             </header>
             <section class="info">
                 <h1 class="hero_font">Where I've Been</h1>
                 <div>
-                    <h2 class="intro">Stadler US - Qualification Test Engineer</h2>
+                    <h2 class="intro">Stadler Rail US - Qualification Test Engineer</h2>
                         <br>
                         <p>
                             2020-Present
