--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <a href="MySkills.html">My Skills</a>
                         <a href="Projects.html">Projects</a>
                         <a href="WorkExperience.html">Work Experience</a>
-                        <button class="button_med" href="#">Contact Me</button>
+                        <button class="button_med" href="ContactMe.html">Contact Me</button>
                     </div>
                 </nav>
             </header>
