--- a/ContactMe.html
+++ b/ContactMe.html
@@ -22,7 +22,7 @@
                     </div>
                 </nav>
              <section>
-                <img src="/Images/Icons/shutterstock_1723717453.eps" alt="">
+                <img class="info" src="/Images/Icons/shutterstock_1723717453.jpg" alt="">
             </section>
         </main>
     </body>
