--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -19,6 +19,7 @@
                         <a href="MySkills.html">My Skills</a>
                         <a href="Projects.html">Projects</a>
                         <a href="WorkExperience.html">Work Experience</a>
+                        <a href="ContactMe.html">Contact Me</a>
                         <button class="button_med" href="ContactMe.html">Contact Me</button>
                     </div>
                 </nav>
@@ -76,6 +77,7 @@
                             </ul> 
                             <br>
                         </p>
+                        <img src="/Images/Icons/shutterstock_1723717453.jpg" alt="/Images/Icons/shutterstock_438858262">
                 </div>     
             </section>
         </main>
