Fixed ContactMe button

--- a/About.html
+++ b/About.html
@@ -18,7 +18,9 @@
                         <a href="MySkills.html">My Skills</a>
                         <a href="Projects.html">Projects</a>
                         <a href="WorkExperience.html">Work Experience</a>
-                        <button class="button_med" href="ContactMe.html">Contact Me</button>
+                        <a href="ContactMe.html" target="blank">
+                            <button class="button_med">Contact Me</button>
+                        </a>
                     </div>
                 </nav>
             </header>
