--- a/ContactMe.html
+++ b/ContactMe.html
@@ -18,11 +18,13 @@
                         <a href="MySkills.html">My Skills</a>
                         <a href="Projects.html">Projects</a>
                         <a href="WorkExperience.html">Work Experience</a>
-                        <button class="button_med" href="ContactMe.html">Contact Me</button>
+                        <a href="ContactMe.html" target="blank">
+                            <button class="button_med">Contact Me</button>
+                        </a>
                     </div>
                 </nav>
              <section>
-                <img class="info" src="/Images/Icons/shutterstock_1723717453.jpg" alt="">
+                <img src="Images/call-outline.svg" alt="./Images/shutterstock_438858262.jpg" width="100px" height="100px">
             </section>
         </main>
     </body>
