--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -19,8 +19,9 @@
                         <a href="MySkills.html">My Skills</a>
                         <a href="Projects.html">Projects</a>
                         <a href="WorkExperience.html">Work Experience</a>
-                        <a href="ContactMe.html">Contact Me</a>
-                        <button class="button_med" href="ContactMe.html">Contact Me</button>
+                        <a href="ContactMe.html" target="blank">
+                            <button class="button_med">Contact Me</button>
+                        </a>
                     </div>
                 </nav>
             </header>
@@ -77,7 +78,6 @@
                             </ul> 
                             <br>
                         </p>
-                        <img src="/Images/Icons/shutterstock_1723717453.jpg" alt="/Images/Icons/shutterstock_438858262">
                 </div>     
             </section>
         </main>
