Contact button finalized

--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -19,7 +19,7 @@
                         <a href="MySkills.html">My Skills</a>
                         <a href="Projects.html">Projects</a>
                         <a href="WorkExperience.html">Work Experience</a>
-                        <a href="ContactMe.html" target="blank">
+                        <a href="ContactMe.html">
                             <button class="button_med">Contact Me</button>
                         </a>
                     </div>
