--- a/ContactMe.html
+++ b/ContactMe.html
@@ -24,7 +24,7 @@
                     </div>
                 </nav>
              <section>
-                <img src="Images/call-outline.svg" alt="./Images/shutterstock_438858262.jpg" width="100px" height="100px">
+                <a href="index.html"><img src="Images/call-outline.svg" alt="./Images/shutterstock_438858262.jpg" width="100px" height="100px"></a>
             </section>
         </main>
     </body>
