Updated work experience and projects

--- a/Projects.html
+++ b/Projects.html
@@ -27,10 +27,18 @@
             <section class="info">
                 <h1 class="hero_font">The Products of My Work</h1>
                 <div>
+                    <h2 class="intro">Work with Gentex</h2>
+                    <br>
+                    <p class="paragraphs">
+                        Upon joining the Gentex team I was thrust into an brand new environment and proceeded to thrive. I applied the skills that I have learned over the years to bring the Salt Lake City branch's Mechanical Engineering Lab up to modern standards. <br>
+                        <br>
+                        One of my main goals when brought on was to bring 5S organization to the lab. I took this project in stride and was able to do so quickly and effectivly. I was able to design, implement, and maintain an organization method in a matter of weeks that is running effectivly to date. 
+                    </p>
+                    <br>
                     <h2 class="intro">The Caltrain</h2>
                         <br>
                         <p class="paragraphs">
-                            I have spent 2020 to present working on the Caltrain project with Stadler Rail that is set to begin service in a couple years. This is a train line that will run from San Francisco to Gilroy California. This all electric, double-decker passenger train will be helping people get from place to place in the Bay Area. <br>
+                            I have spent 2020 to 2022 working on the Caltrain project with Stadler Rail that is set to begin service in a couple years. This is a train line that will run from San Francisco to Gilroy California. This all electric, double-decker passenger train will be helping people get from place to place in the Bay Area. <br>
                             <br>
                             Personally, I have worked as the type test engineer for this project. This role has allowed me to work in the electrical, mechanical, and software fields of engineering and ensure that the project is meeting the proper timelines as well as specifications. A broad list of technical skills are applied daily as well as many people skills to keep it all running smoothly.
                         </p>
