--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -28,10 +28,27 @@
             <section class="info">
                 <h1 class="hero_font">Where I've Been</h1>
                 <div>
-                    <h2 class="intro">Stadler Rail US - Qualification Test Engineer</h2>
+                    <h2 class="intro">Gentex - Product Development Engineer II</h2>
                         <br>
                         <p>
-                            2020-Present
+                            2022-Present
+                        </p>
+                        <br>
+                        <p>
+                            <ul class="paragraphs_lists">
+                                <li>Support research of a cutting edge sensor from a mechanical engineering and software scripting standpoint</li>
+                                <li>Design custom laboratory equipment from the ground up and bring it into operation</li>
+                                <li>Design using Solidworks and Catia</li>
+                                <li>Design different fixtures and complex 3D models for 3D printing</li>
+                                <li>Work within multiple teams at once to achieve a common goal</li>
+                                <li>Work directly with suppliers and vendors to ensure that ordered parts are delivered on time</li>
+                            </ul> 
+                            <br>
+                        </p>
+                        <br>
+                    <h2 class="intro">Stadler Rail US - Qualification Test Engineer</h2>
+                        <p>
+                            2020-2022
                         </p>
                         <br>
                         <p>
@@ -70,14 +87,6 @@
                             2017-2018
                         </p>
                         <br>
-                        <p>
-                            <ul class="paragraphs_lists">
-                                <li>Answer questions concerning the Bovee University Center</li>
-                                <li>Fix AV and sound issues when events need assistance</li>
-                                <li>Help with setup when needed for various events</li>
-                            </ul> 
-                            <br>
-                        </p>
                 </div>     
             </section>
         </main>
